--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+    <p>Email: <a href="mailto:yramid@protonmail.com">your.email@example.com</a></p>
+    <p>GitHub: <a href="https://github.com/yramid" target="_blank">github.com/yourusername</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
   </section>
 
